--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastembed>=0.6.0",
     "qdrant-client>=1.12.0",
     "pydantic>=2.10.6",
-    "fastmcp>=2.5.1",
+    "fastmcp>=2.5.1,<2.7.0",
 ]
 
 [build-system]
@@ -18,6 +18,7 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
+    "ipdb>=0.13.13",
     "isort>=6.0.1",
     "mypy>=1.9.0",
     "pre-commit>=4.1.0",
