feat: extend existing logic and expose deep meta search tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,21 @@
 [project]
-name = "mcp-server-qdrant"
-version = "0.8.0"
-description = "MCP server for retrieving context from a Qdrant vector database"
+name = "mcp-server-qdrant-pro"
+version = "0.9.0"
+description = "MCP server for Qdrant vector database - supports personal memory management and enterprise GitHub codebase search. Extended from original mcp-server-qdrant package"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "Apache-2.0"
+keywords = ["mcp", "qdrant", "vector-database", "memory", "rag"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "fastembed>=0.6.0",
     "qdrant-client>=1.12.0",
@@ -29,10 +40,13 @@ dev-dependencies = [
 ]
 
 [project.scripts]
-mcp-server-qdrant = "mcp_server_qdrant.main:main"
+mcp-server-qdrant-pro = "mcp_server_qdrant.main:main"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
 asyncio_mode = "auto"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/mcp_server_qdrant"]
