--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "qdrant-client>=1.12.0",
     "pydantic>=2.10.6",
     "fastmcp>=2.7.0",
+    "voyageai>=0.2.0",
 ]
 
 [build-system]
